--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,3 +6,9 @@ http {
   host = "localhost"
   port = 8080
 }
+
+http-proxy {
+  host = "fastloantest.rencredit.ru"
+  port = 80
+  path = "https://fastloantest.rencredit.ru/SecLoanServicePilot/SecLoanCrbOnlineSrv"
+}
