--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,7 +8,9 @@ http {
 }
 
 http-proxy {
-  host = "fastloantest.rencredit.ru"
-  port = 80
+  path = "http://localhost:8086/SecLoanServicePilot/SecLoanCrbOnlineSrv"
+}
+
+http-proxy1 {
   path = "https://fastloantest.rencredit.ru/SecLoanServicePilot/SecLoanCrbOnlineSrv"
 }
