--- a/build.gradle
+++ b/build.gradle
@@ -27,13 +27,19 @@ buildscript {
     }
 }
 
+//jar {
+//    manifest {
+//        attributes 'Main-Class': 'run.HttpWebServer'
+//    }
+//}
+
 task awesomeFunJar(type: OneJar) {
-    mainClass = 'run.Main'
-    archiveName = 'soapproxy.jar'
+    mainClass = 'run.HttpWebServer'
+    archiveName = 'soapproxy-one-jar.jar'
 }
 
 dependencies {
-    compile 'org.scala-lang:scala-library:2.12'
+    compile 'org.scala-lang:scala-library:2.12.6'
     compile 'com.typesafe.akka:akka-actor_2.12:2.5.4'
     compile 'com.typesafe.akka:akka-slf4j_2.12:2.5.4'
 
